<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/fg_login_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/account"
        android:textColor="@color/colorAccent"
        android:inputType="text"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/fg_login_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:textColor="@color/colorAccent"
        android:inputType="text"/>

    <TextView
        android:id="@+id/fg_login_toRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toregist"
        android:textColor="@color/mdColor_blue"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right|center_vertical"/>

    <Button
        android:id="@+id/fg_login_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/mdColor_blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_subhead"/>

</LinearLayout>